app/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codecooking-frontend
  namespace: codecooking
  labels:
    app: codecooking-frontend
    app.kubernetes.io/part-of: codecooking
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: codecooking-frontend
